fix alignment on logo reveal slide

--- a/src/styles/slide-types.styl
+++ b/src/styles/slide-types.styl
@@ -165,6 +165,15 @@
     &.bespoke-active::after
       height 0
       transition height 2s ease-in-out 1s
+    figure.image
+      width 100%
+      flex-grow 1
+      display flex
+      flex-direction row
+      align-items center
+      justify-content center
+      img
+        flex 0 0 50%
 
    &.code
      h2
